Tests now working.